добавил catch, vector: вынес ф-ии в файл заголовка и создал файл для тестов

--- a/lw2/vector/vector/vector.vcxproj.filters
+++ b/lw2/vector/vector/vector.vcxproj.filters
@@ -24,4 +24,9 @@
       <Filter>Исходные файлы</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="vector.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
