--- a/lw2/vector/vector/vector.vcxproj
+++ b/lw2/vector/vector/vector.vcxproj
@@ -155,6 +155,9 @@
   <ItemGroup>
     <None Include="test.bat" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="vector.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
