--- a/lw2/vector/vector/vector.vcxproj
+++ b/lw2/vector/vector/vector.vcxproj
@@ -110,7 +110,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PostBuildEvent>
-      <Command>test.bat "$(TargetPath)"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -151,9 +152,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="vector.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="test.bat" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="vector.h" />
