--- a/lw2/htmlDecode/htmlDecode/htmlDecode.vcxproj
+++ b/lw2/htmlDecode/htmlDecode/htmlDecode.vcxproj
@@ -149,6 +149,9 @@
   <ItemGroup>
     <ClCompile Include="htmlDecode.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="htmlDecode.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
