--- a/lw2/htmlDecode/htmlDecode/htmlDecode.vcxproj.filters
+++ b/lw2/htmlDecode/htmlDecode/htmlDecode.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClInclude Include="htmlDecode.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="consts.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
