--- a/lw2/htmlDecode/htmlDecode/htmlDecode.vcxproj
+++ b/lw2/htmlDecode/htmlDecode/htmlDecode.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="htmlDecode.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="consts.h" />
     <ClInclude Include="htmlDecode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
